# magglob-rs

./: Cargo.toml  README.md
src/: error.rs  exchanges.rs  lib.rs  order_book.rs  red_black_book.rs
src/exchanges/: binance.rs  exchange_utils.rs  kraken.rs  mod.rs
src/exchanges/binance/: mod.rs  stream.rs
src/exchanges/kraken/: mod.rs
src/order_book/: btree_map.rs  mod.rs  rbtree.rs
