[package]
name = "rbb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
log = "0.4.17"
log4rs = "1.2.0"
thiserror = "1.0.36"
criterion = {version = "0.4.0", features = ["async_tokio"]}
tokio = { version = "1.28.1", features = ["full"] }
reqwest = "0.11.18"
serde_json = "1.0.96"
tungstenite = "0.19.0"
tokio-tungstenite = "0.19.0"
futures = "0.3.28"
